--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
         <script src="{{ cb_url('autocomplete.js') }}"></script>
     {% endif %}
     <script type="text/javascript" src="{{ cb_url('controller.js') }}"></script>
-    <link rel="search" href="opensearch.xml" type="application/opensearchdescription+xml" title="Whoogle Search">
+    <link rel="search" href="opensearch.xml" type="application/opensearchdescription+xml" title="SPSE Search">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ cb_url('logo.css') }}">
     {% if config.theme %}
@@ -56,7 +56,7 @@
         </style>
     </noscript>
     <style>{{ config.style }}</style>
-    <title>Whoogle Search</title>
+    <title>SPSE Search</title>
 </head>
 <body id="main">
 <div class="search-container">
@@ -239,7 +239,7 @@
                         </div>
                         <div class="config-div config-div-custom-css">
                             <a id="css-link"
-                               href="https://github.com/benbusby/whoogle-search/wiki/User-Contributed-CSS-Themes">
+                               href="">
                                 {{ translation['config-css'] }}:
                             </a>
                             <textarea
