--- a/app/templates/display.html
+++ b/app/templates/display.html
@@ -3,9 +3,9 @@
     <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="static/img/favicon.ico" type="image/x-icon">
     {% if not search_type %}
-        <link rel="search" href="opensearch.xml" type="application/opensearchdescription+xml" title="Whoogle Search">
+        <link rel="search" href="opensearch.xml" type="application/opensearchdescription+xml" title="SPSE Search Search">
     {% else %}
-        <link rel="search" href="opensearch.xml?tbm={{ search_type }}" type="application/opensearchdescription+xml" title="Whoogle Search ({{ search_name }})">
+        <link rel="search" href="opensearch.xml?tbm={{ search_type }}" type="application/opensearchdescription+xml" title="SPSE Search Search ({{ search_name }})">
     {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer">
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="{{ cb_url(('dark' if config.dark else 'light') + '-theme.css') }}"/>
     {% endif %}
     <style>{{ config.style }}</style>
-    <title>{{ clean_query(query) }} - Whoogle Search</title>
+    <title>{{ clean_query(query) }} - SPSE Search Search</title>
 </head>
 <body>
 {{ search_header|safe }}
