--- a/app/templates/display.html
+++ b/app/templates/display.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="{{ cb_url(('dark' if config.dark else 'light') + '-theme.css') }}"/>
     {% endif %}
     <style>{{ config.style }}</style>
-    <title>{{ clean_query(query) }} - SPSE Search Search</title>
+    <title>{{ clean_query(query) }} - SPSE Search</title>
 </head>
 <body>
 {{ search_header|safe }}
