--- a/app/templates/opensearch.xml
+++ b/app/templates/opensearch.xml
@@ -2,11 +2,11 @@
 <OpenSearchDescription xmlns="http://a9.com/-/spec/opensearch/1.1/"
                        xmlns:moz="http://www.mozilla.org/2006/browser/search/">
     {% if not search_type %}
-        <ShortName>Whoogle</ShortName>
+        <ShortName>SPSE Search</ShortName>
     {% else %}
-        <ShortName>Whoogle {{ search_name }}</ShortName>
+        <ShortName>SPSE Search {{ search_name }}</ShortName>
     {% endif %}
-    <Description>Whoogle: A lightweight, deployable Google search proxy for desktop/mobile that removes Javascript, AMP links, and ads
+    <Description>SPSE Search
     </Description>
     <InputEncoding>UTF-8</InputEncoding>
     <Image width="60" height="60" type="image/png">
