--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -7,7 +7,7 @@
             autocapitalize="none"
             spellcheck="false"
             autocorrect="off"
-            placeholder="Whoogle Search"
+            placeholder="SPSE Search"
             autocomplete="off"
             dir="auto">
     <input type="submit" style="width: 9%" id="search-submit" value="Search">
